Removed management token from get single share link. Updated swagger docs and tests.
